# bgfx

./: .gitignore  CMakeLists.txt  README.md  RefreshProjectFiles.bat
examples/: CMakeLists.txt
examples/01-cubes/: cubes.cpp
examples/09-hdr/: hdr.cpp
examples/27-tesselation/: fs_tesselation.sc  tesselation.cpp
examples/27-tessellation/: ds_tesselation.sc  ds_tessellation.sc  fs_tessellation.sc  hs_tesselation.sc  hs_tessellation.sc  tessellation.cpp  varying.def.sc  vs_tessellation.sc
examples/38-tessellation/: ds_tessellation.sc  fs_tessellation.sc  hs_tessellation.sc  tessellation.cpp  varying.def.sc  vs_tessellation.sc
examples/41-arealights/: .directory  arealights.cpp  arealights.h  common.sh  fs_arealights_blit.sc  fs_arealights_color_constant.sc  fs_arealights_color_textured.sc  fs_arealights_diffuse_gt.sc  fs_arealights_diffuse_ltc.sc  fs_arealights_packdepth.sc  fs_arealights_packdepth_light.sc  fs_arealights_specular_gt.sc  fs_arealights_specular_ltc.sc  helpers.sh  ltc.sh  mtlloader.cpp  mtlloader.h  shader_context.sh  shader_defines.sh  shader_inputs.sh  squad.sh  varying.def.sc  vs_arealights_blit.sc  vs_arealights_color.sc  vs_arealights_depth.sc  vs_arealights_lighting.sc  vs_arealights_packdepth.sc  vs_arealights_textured.sc
examples/common/: bgfx_utils.cpp  bgfx_utils.h
examples/runtime/textures/: nml.tga  stained_glass.zlib
include/bgfx/: bgfx.h  bgfxdefines.h  defines.h
scripts/: genie.lua  shader.mk
src/: bgfx.cpp  bgfx_p.h  bgfx_shader.sh  config.h  glimports.h  renderer.h  renderer_d3d11.cpp  renderer_d3d11.h  renderer_d3d12.cpp  renderer_d3d9.cpp  renderer_gl.cpp  renderer_gl.h  renderer_mtl.mm  renderer_noop.cpp  renderer_vk.cpp
tools/: CMakeLists.txt
tools/shaderc/: shaderc.cpp  shaderc.h  shaderc_glsl.cpp  shaderc_hlsl.cpp
